--- a/src/app/Components/cinema-seat/cinema-seat.component.scss
+++ b/src/app/Components/cinema-seat/cinema-seat.component.scss
@@ -1,78 +1,72 @@
-.seat {
-    width: 40px;
-    height: 40px;
-    margin-right: 5px;
-    background-color: #306c91;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
+// Extra Small
+@media only screen and (max-width: 600px) {
+  .seat,
+  .takenSeat,
+  .reservedSeat {
+    width: 22px;
+    height: 22px;
+    transition: width 0.3s ease, height 0.3s ease; /* Adding transition */
   }
   .seat:hover {
-    background-color: #4a4a4a;
-    color: gray;
+    width: 19px;
+    height: 19px;
   }
-  .takenSeat {
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .seat,
+  .takenSeat,
+  .reservedSeat {
+    width: 22px;
+    height: 22px;
+    transition: width 0.3s ease, height 0.3s ease; /* Adding transition */
+  }
+  .seat:hover {
+    width: 19px;
+    height: 19px;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .seat,
+  .takenSeat,
+  .reservedSeat {
+    width: 30px;
+    height: 30px;
+    transition: width 0.3s ease, height 0.3s ease; /* Adding transition */
+  }
+  .seat:hover {
+    width: 28px;
+    height: 28px;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .seat,
+  .takenSeat,
+  .reservedSeat {
     width: 40px;
     height: 40px;
-    margin-right: 5px;
-    background-color: green;
-    color: gray;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
+    transition: width 0.3s ease, height 0.3s ease; /* Adding transition */
   }
-  .reservedSeat{
+  .seat:hover {
+    width: 38px;
+    height: 38px;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .seat {
     width: 40px;
     height: 40px;
-    margin-right: 5px;
-    background-color: #e50914;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
+    cursor: pointer;
+    transition: width 0.3s ease, height 0.3s ease; /* Adding transition */
   }
-  // Extra Small
-@media only screen and (max-width: 600px) {
-  .seat,.takenSeat,.reservedSeat {
-      width: 22px;
-      height: 22px;
-    }
+  .seat:hover {
+    width: 38px;
+    height: 38px;
   }
-  /* Small devices (portrait tablets and large phones, 600px and up) */
-  @media only screen and (min-width: 600px) {
-    .seat,.takenSeat,.reservedSeat {
-      width: 22px;
-      height: 22px;
-    }
-    
-  }
-  
-  /* Medium devices (landscape tablets, 768px and up) */
-  @media only screen and (min-width: 768px) {
-    .seat,.takenSeat,.reservedSeat {
-      width: 30px;
-      height: 30px;
-    }
-    
-  }
-  
-  /* Large devices (laptops/desktops, 992px and up) */
-  @media only screen and (min-width: 992px) {
-    .seat,.takenSeat,.reservedSeat {
-      width: 40px;
-      height: 40px;
-    }
-    
-  }
-  
-  /* Extra large devices (large laptops and desktops, 1200px and up) */
-  @media only screen and (min-width: 1200px) {
-    .seat,.takenSeat,.reservedSeat {
-      width: 40px;
-      height: 40px;
-    }
-   
-  }
+}
