--- a/src/app/Components/cinema-seat/cinema-seat.component.html
+++ b/src/app/Components/cinema-seat/cinema-seat.component.html
@@ -1,1 +1,4 @@
-<div  class="seat" [style.background]="seatState.getSeatColor(seat.row,seat.num,seat)" >{{seatNum}}</div>
+<div class="con">
+    <div  class="seat" [style.background]="seatState.getSeatColor(seat.row,seat.num,seat)" >{{seatNum}}</div>
+</div>
+
