--- a/src/app/Pages/booking/booking.component.scss
+++ b/src/app/Pages/booking/booking.component.scss
@@ -73,16 +73,12 @@
   width: 40px;
   height: 40px;
   margin-right: 5px;
-  background-color: #306c91;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 5px;
 }
-.seat:hover {
-  background-color: #4a4a4a;
-  color: gray;
-}
+
 .takenSeat {
   width: 40px;
   height: 40px;
@@ -97,61 +93,12 @@
 .p-icon {
   color: #fdcc0d;
 }
-// Extra Small
-@media only screen and (max-width: 600px) {
-  .seat {
-    width: 22px;
-    height: 22px;
-  }
-  .takenSeat {
-    width: 22px;
-    height: 22px;
-  }
-}
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-  .seat {
-    width: 22px;
-    height: 22px;
-  }
-  .takenSeat {
-    width: 22px;
-    height: 22px;
-  }
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-  .seat {
-    width: 30px;
-    height: 30px;
-  }
-  .takenSeat {
-    width: 30px;
-    height: 30px;
-  }
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-  .seat {
-    width: 40px;
-    height: 40px;
-  }
-  .takenSeat {
-    width: 40px;
-    height: 40px;
-  }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-  .seat {
-    width: 40px;
-    height: 40px;
-  }
-  .takenSeat {
-    width: 40px;
-    height: 40px;
-  }
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(91, 91, 91, 0.5); /* Gray color with opacity */
+  z-index: 1000; /* Ensure it's above other elements */
 }
