single movie page

--- a/src/app/Components/movies-cards/movies-cards.component.html
+++ b/src/app/Components/movies-cards/movies-cards.component.html
@@ -1,5 +1,6 @@
 @if (movie) {
 
+<!-- <div class="cards cards--one" (click)="routeMovie()"> -->
 <div class="cards cards--one" routerLink="movie/{{ movie.id }}">
   <div>
     <img
