--- a/src/app/Components/single-movie/single-movie.component.html
+++ b/src/app/Components/single-movie/single-movie.component.html
@@ -1,1 +1,162 @@
-<p>Single Move Page Goes Here</p>
+<div class="container">
+  <div class="row">
+    <div class="mx-lg-auto mx-md-auto mx-sm-auto col-22 mt-3 box">
+      <div class="mt-3 row mb-5">
+        <div class="smart-image-container col-lg-8 col-md-16 mx-md-auto">
+          <img
+            class="smart-image p-2 w-100 d-md-block mx-auto"
+            [src]="movieDetails.Poster"
+            alt=""
+          />
+        </div>
+        <div class="col-lg-14 col-md-24 col-sm-24 p-2 p-sm-0">
+          <div class="row">
+            <div
+              class="col-lg-19 col-md-21 col-sm-24 mx-lg-auto d-lg-block d-md-block d-none"
+            >
+              <h1 class="movie-title ms-5 text-md-center mt-sm-5 text-sm">
+                {{ movieDetails?.Title }}
+              </h1>
+            </div>
+            <div
+              class="col-lg-4  col-md-2 mt-sm-5 offset-0 col-1 d-lg-block d-md-block d-none ms-md-0 "
+            >
+              <i
+                [style.font-size.px]="iconSize"
+                [class]="heartIconClass"
+                [style.color]="heartIconColor"
+                (click)="toggleHeartClassAndColor()"
+              ></i>
+            </div>
+          </div>
+
+          <!-- </div> -->
+          <div
+            class="ms-5 genre-year-container d-lg-none d-md-none d-block mb-lg-1 mb-md-2 mb-3"
+          >
+            <h3 class="fs-4 d-inline-block me-4">Title</h3>
+            <p class="d-inline-block">{{ movieDetails.Title }}</p>
+          </div>
+          <div class="ms-5 genre-year-container mb-lg-1 mb-md-2 mb-3">
+            <h3 class="fs-4 d-inline-block me-4">Genre</h3>
+            <p class="d-inline-block">{{ movieDetails.Genre }}</p>
+          </div>
+          <div class="ms-5 genre-year-container mb-lg-1 mb-md-2 mb-3">
+            <h3 class="d-inline-block me-4">Year</h3>
+            <p class="d-inline-block">{{ movieDetails.Year }}</p>
+          </div>
+          <div
+            class="ms-5 genre-year-container w-auto mb-4 mb-lg-1 mb-md-2 mb-3"
+          >
+            <h3 class="d-inline-block me-4">Description</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+              vero assumenda perferendis quam ducimus vitae sed voluptatum,
+              velit illum eos soluta animi perspiciatis reprehenderit eius minus
+              possimus quaerat provident autem?Lorem ipsum dolor, sit amet
+              consectetur.
+            </p>
+          </div>
+          <div class="ms-5 genre-year-container w-auto">
+            <h3 class="d-inline-block me-4">Rate</h3>
+            <p-rating
+              [(ngModel)]="value"
+              [cancel]="false"
+              [readonly]="true"
+              class="custom-stars"
+            ></p-rating>
+          </div>
+          <!-- booking and Add to favorite -->
+          <div
+            class="ms-5 genre-year-container w-auto row justify-content-between mt-3"
+          >
+            <div
+              class="col-lg-3 offset-md-0 col-md-4 mt-sm-5 offset-0 col-1 d-lg-none d-md-none d-block small-heart d-flex flex-column justify-content-center"
+            >
+              <i
+                [style.font-size.px]="iconSize2"
+                [class]="heartIconClass"
+                [style.color]="heartIconColor"
+                (click)="toggleHeartClassAndColor()"
+              ></i>
+            </div>
+            <div class="d-flex justify-content-end col-lg-24 col-md-24 col-14 h-auto py-lg-4 px-lg-2 py-md-4 px-md-2 py-4 px-2">
+              <button class="customBtn mx-2 btn btn-block btn-sm text-sm-center h-auto" (click)="bookPage()">
+                Book Now
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Comments -->
+
+      <div class="border-top mb-4">
+        <h1 class="mt-5 mb-4 text-center favMovies">Movies You may like</h1>
+      </div>
+      <div class="container mt-5">
+        <div class="row justify-content-center align-items-center">
+          <div class="wrapper" (click)="singlemovie()">
+            @for (movie of allMovies; track $index) { @if (movie.Genre ==
+            movieDetails.Genre && movie.id!= movieDetails.id) {
+            <app-movies-cards [movie]="movie"></app-movies-cards>
+            }}
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="mt-5">
+          <div class="border-top mb-4">
+            <h1 class="mt-5 mb-4 text-center favMovies">User Review</h1>
+          </div>
+          <h1 class="mb-1">Comment</h1>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-12 col-md-18 col-24">
+                <textarea #comment></textarea>
+              </div>
+            </div>
+          </div>
+          <div>
+            <h1 class="d-inline-block me-2">Rate :</h1>
+            <p-rating #rate [cancel]="false" class="custom-stars"></p-rating>
+          </div>
+          <div>
+            <button
+              (click)="reviewData(comment.value, rate.value)"
+              class="customBtn mx-2 mb-3"
+            >
+              Comment
+            </button>
+          </div>
+          <div class="container">
+            <div class="row">
+              @for (review of reviews; track $index) {
+              <div class="border-top mb-4 mb-3 col-lg-8 col-md-12 col-24">
+                <p-avatar
+                  icon="pi pi-user"
+                  styleClass="mr-2 mt-3"
+                  size="large"
+                  [style]="{ 'background-color': 'red', color: '#ffffff' }"
+                  shape="circle"
+                  class=""
+                ></p-avatar>
+                <h1 class="d-inline-block ms-3">User Name</h1>
+                <br />
+                <h2 class="d-inline-block me-2">Comment :</h2>
+                <p class="d-inline-block">{{ review.comment }}</p>
+                <br />
+                <h2 class="d-inline-block me-2">Rate</h2>
+                <p-rating
+                  [(ngModel)]="review.rate"
+                  [cancel]="false"
+                  class="custom-stars d-inline-block"
+                ></p-rating>
+              </div>
+              }
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
