feat: :sparkles: Integrate cart endpoints

--- a/src/app/Components/checkout/checkout.component.html
+++ b/src/app/Components/checkout/checkout.component.html
@@ -154,7 +154,9 @@
     </div>
 
     <div class="checkout">
-      <button class="checkout-btn">Make a Payment</button>
+      <button class="checkout-btn" (click)="checkoutUserCart(userCart)">
+        Make a Payment
+      </button>
     </div>
   </div>
 </div>
