--- a/src/app/Pages/sign-in/sign-in.component.html
+++ b/src/app/Pages/sign-in/sign-in.component.html
@@ -85,7 +85,7 @@
         <!------------------------------------------------------------------------------------------------->
         <button class="btn" type="submit">Sign In</button>
 
-        <p style="font-size: 1.4rem">Or</p>
+        <p style="font-size: 1.4rem">OR</p>
 
         <div class="google-container">
           <div id="google-btn"></div>
