--- a/src/app/Components/single-movie/single-movie.component.scss
+++ b/src/app/Components/single-movie/single-movie.component.scss
@@ -1,87 +1,83 @@
 .smart-image-container {
-    position: relative;
-    overflow: hidden;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: 400px;
-  }
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  height: 400px;
+}
 
-  .smart-image {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.3s ease-in-out;
-    border-radius: 35px;
-  }
+.smart-image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease-in-out;
+  border-radius: 35px;
+}
 
-  .smart-image-container:hover .smart-image {
-    transform: scale(1.1);
-  }
+.smart-image-container:hover .smart-image {
+  transform: scale(1.1);
+}
 
+.smart-image-container:hover .overlay {
+  opacity: 1;
+}
+.movie-title {
+  font-family: "Arial", sans-serif;
+  font-size: 2.5rem;
+  color: #ffffff;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  position: relative;
+  display: inline-block;
+  margin-bottom: 20px;
+}
 
+// .movie-title::before,
+// .movie-title::after {
+//   content: '';
+//   position: absolute;
+//   height: 2px;
+//   background-color: #e74c3c;
+//   width: 40%;
+//   top: 50%;
+//   transform: translateY(-50%);
+// }
 
-  .smart-image-container:hover .overlay {
-    opacity: 1;
-  }
-  .movie-title {
-    font-family: 'Arial', sans-serif;
-    font-size: 2.5rem;
-    color: #ffffff;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    position: relative;
-    display: inline-block;
-    margin-bottom: 20px;
-  }
+.genre-year-container {
+  margin-left: 5px;
+}
 
-  // .movie-title::before,
-  // .movie-title::after {
-  //   content: '';
-  //   position: absolute;
-  //   height: 2px;
-  //   background-color: #e74c3c;
-  //   width: 40%;
-  //   top: 50%;
-  //   transform: translateY(-50%);
-  // }
+.genre-year-container h3 {
+  font-size: 1.5rem;
+  display: inline-block;
+  margin-right: 5px;
+  color: #faf9f9;
+  background-color: #e50914;
+  border-radius: 25px;
+  padding-right: 10px;
+  padding-left: 10px;
+  letter-spacing: 2px;
+  text-align: center;
+}
 
-  .genre-year-container {
-    margin-left: 5px;
-  }
-
-  .genre-year-container h3 {
-    font-size: 1.5rem;
-    display: inline-block;
-    margin-right: 5px;
-    color: #faf9f9;
-    background-color: #e50914;
-    border-radius: 25px;
-    padding-right: 10px;
-    padding-left: 10px;
-    letter-spacing: 2px;
-    text-align: center;
-  }
-
-  .genre-year-container p {
-    font-size: 1.5rem;
-    display: inline-block;
-    margin: 0;
-    color: #f5f5f5;
-  }
-  .box {
-    border-radius: 12px;
-    background-image: url(../../../assets/hero.jpg);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-top: 20px;
-  }
-  :host ::ng-deep 
-	.p-rating-icon:not(.p-rating-cancel), 
-  :host ::ng-deep 
-	.p-rating-icon:not(.p-rating-cancel):hover { 
-	color: yellow !important; 
+.genre-year-container p {
+  font-size: 1.5rem;
+  display: inline-block;
+  margin: 0;
+  color: #f5f5f5;
+}
+.box {
+  border-radius: 12px;
+  background-image: url(/assets/images/hero.jpg);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin-top: 20px;
+}
+:host ::ng-deep .p-rating-icon:not(.p-rating-cancel),
+:host ::ng-deep .p-rating-icon:not(.p-rating-cancel):hover {
+  color: yellow !important;
   width: 15px;
 }
 .customBtn {
@@ -90,7 +86,7 @@
   border: none;
   border-radius: 8px;
   font-size: 1.5rem;
-  padding: 10px ;
+  padding: 10px;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
 }
@@ -109,16 +105,16 @@
 .fav-empty {
   fill: white; /* Change the color as desired for the empty state */
   transition: color 0.3s ease-in-out;
-   /* Add a transition for a smooth color change */
+  /* Add a transition for a smooth color change */
 }
 
 .fav-empty:hover {
   color: #ff7373; /* Change the color on hover for a visual effect */
 }
-.relatedMovie{
-height: 300px;
+.relatedMovie {
+  height: 300px;
 }
-.custom-heart-button{
+.custom-heart-button {
   font-size: 1.5rem;
   border-radius: 50%;
   transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
@@ -144,20 +140,20 @@ height: 300px;
   color: #ff7373; /* Change the color on hover for a visual effect */
   transition: color 0.3s ease-in-out;
 }
-.card-container{
+.card-container {
   background-color: #252525;
   border-radius: 25px 0;
   height: auto;
 }
-.card-container img{
-border-radius: 25px 0;
-height: 250px;
-object-fit: cover;
+.card-container img {
+  border-radius: 25px 0;
+  height: 250px;
+  object-fit: cover;
 }
-.favMovies{
+.favMovies {
   text-decoration: wavy;
   letter-spacing: 3px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 35px;
   font-weight: 900;
 }
@@ -183,7 +179,7 @@ object-fit: cover;
     grid-template-columns: repeat(1, 1fr);
   }
 }
-.comments{
+.comments {
   color: #e50914;
 }
 /* Smart CSS Style for Textarea */
@@ -208,7 +204,7 @@ textarea:hover {
 /* Focus effect */
 textarea:focus {
   outline: none;
-  border-color: #2196F3;
+  border-color: #2196f3;
   box-shadow: 0 0 5px rgba(33, 150, 243, 0.5);
 }
 
@@ -222,6 +218,6 @@ textarea:disabled {
 textarea::placeholder {
   color: #999;
 }
-.small-heart{
+.small-heart {
   width: 10px;
 }
