style: :art: Refactor navbar + pagination

--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -24,6 +24,7 @@ nav {
   font-weight: 800;
   letter-spacing: 1px;
   color: var(--color-var3);
+  cursor: pointer;
 
   span {
     color: var(--color-var2);
