--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -29,7 +29,7 @@
           </div>
 
           @if (filterdMovies?.length > 10) {
-          <div class="mt-5 pagination">
+          <div class="pagination">
             <pagination-controls
               class="pagination"
               (pageChange)="p = $event"
