--- a/src/app/Pages/checkout/checkout.component.scss
+++ b/src/app/Pages/checkout/checkout.component.scss
@@ -4,6 +4,8 @@
   grid-gap: 20px;
   margin: 20px 40px;
   padding: 20px;
+  background-color: #14141a;
+  border-radius: 10px;
 }
 
 .cart-section {
@@ -79,11 +81,11 @@
 }
 
 .payment {
-  background-color: #14141a;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   height: fit-content;
+  border: 2px solid #ccc;
 }
 
 .movie-header {
@@ -200,10 +202,10 @@ input[type="tel"] {
 .checkout-btn {
   display: block;
   margin: 20px auto 32px auto;
-  width: 75%;
+  width: 100%;
   background: #ffd789;
   color: #000;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 18px;
   border: none;
   padding: 12px 20px;
