--- a/src/app/Pages/checkout/checkout.component.scss
+++ b/src/app/Pages/checkout/checkout.component.scss
@@ -88,14 +88,6 @@
   border: 2px solid #ccc;
 }
 
-.movie-header {
-  display: grid;
-  grid-template-columns: 1fr 1fr 0.5fr 1fr;
-  grid-gap: 20px;
-  align-items: center;
-  padding: 20px;
-}
-
 .header {
   font-weight: bold;
   padding-bottom: 10px;
@@ -222,6 +214,60 @@ input[type="tel"] {
   transform: translateY(-2px);
 }
 
+.reserved {
+  display: grid;
+  grid-template-columns: 0.25fr 1fr 0.25fr;
+  gap: 20px;
+  margin-bottom: 20px;
+
+  p {
+    font-size: 1.8rem;
+  }
+
+  span {
+    color: #aca6a5;
+  }
+
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, auto);
+    justify-items: center;
+
+    p {
+      font-size: 1.6rem;
+    }
+  }
+
+  @media (max-width: 425px) {
+    p {
+      font-size: 1rem;
+    }
+  }
+
+  .reserved-data {
+    display: grid;
+    grid-template-columns: 1fr 0.5fr;
+    margin: auto;
+
+    gap: 10px;
+
+    .reserved-row {
+      display: flex;
+      justify-content: left;
+      align-items: center;
+
+      .seats-details {
+        margin-right: auto;
+        margin-left: 10px;
+      }
+    }
+  }
+
+  .reserved-btn {
+    align-self: self-end;
+  }
+}
+
 @media (max-width: 1024px) {
   .parent {
     margin: 20px;
@@ -266,6 +312,6 @@ input[type="tel"] {
   }
 
   .checkout-btn {
-    width: 80%;
+    font-size: 1.2rem;
   }
 }
