feat: :sparkles: Add delete movie from cart

--- a/src/app/Pages/checkout/checkout.component.html
+++ b/src/app/Pages/checkout/checkout.component.html
@@ -59,7 +59,7 @@
         </div>
       </div>
 
-      <div class="reserved-btn">
+      <div class="reserved-btn" (click)="removeMovie(item)">
         <button class="primary-btn">Remove</button>
       </div>
     </div>
