single movie routing

--- a/src/app/Components/movies-cards/movies-cards.component.html
+++ b/src/app/Components/movies-cards/movies-cards.component.html
@@ -1,7 +1,7 @@
 @if (movie) {
 
 <!-- <div class="cards cards--one" (click)="routeMovie()"> -->
-<div class="cards cards--one" routerLink="movie/{{ movie.id }}">
+<div class="cards cards--one" routerLink="movie/{{ movie.Title }}">
   <div>
     <div class="myPoster">
       <img
