--- a/src/app/Components/single-movie/single-movie.component.scss
+++ b/src/app/Components/single-movie/single-movie.component.scss
@@ -70,7 +70,7 @@
   }
   .box {
     border-radius: 12px;
-    background-image: url(../../../assets/hero.jpg);
+    background-image: url(/assets/hero.jpg);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin-top: 20px;
