--- a/src/app/Components/navbar/navbar.component.scss
+++ b/src/app/Components/navbar/navbar.component.scss
@@ -81,12 +81,6 @@ nav {
   width: 100%;
 }
 
-// .links a:focus,
-// .links a:active {
-//   border-bottom: 3px solid var(--color-var3);
-//   color: var(--color-var2);
-// }
-
 .search-box a {
   text-decoration: none;
   color: black;
@@ -188,42 +182,9 @@ button {
         color: #aca6a5;
       }
     }
-
-    @media (max-width: 1024px) {
-      .links {
-        gap: 20px;
-      }
-
-      .search-box:hover input,
-      .search-box input:not(:placeholder-shown) {
-        width: 150px;
-        font-size: 1.3rem;
-      }
-    }
-
-    @media (max-width: 768px) {
-      .links {
-        display: none;
-      }
-
-      .search-box:hover input,
-      .search-box input:not(:placeholder-shown) {
-        width: 150px;
-        font-size: 1.3rem;
-      }
-
-      .search-box {
-        margin-left: 0.2rem;
-      }
-    }
-
-    @media (max-width: 425px) {
-      .logo {
-        font-size: 2rem;
-      }
-    }
   }
 }
+
 .toggleIcon {
   display: none;
   background-color: transparent;
@@ -231,12 +192,15 @@ button {
   border: none;
   font-size: 20px;
 }
+
 .p-component-overlay {
   z-index: 999 !important;
 }
+
 .p-sidebar-header {
   margin-bottom: 30px;
 }
+
 .p-sidebar {
   width: 100%;
   background-color: var(--color-var1);
@@ -322,40 +286,6 @@ button {
             font-size: 1rem;
           }
         }
-
-        @media (max-width: 1024px) {
-          .links {
-            gap: 20px;
-          }
-
-          .search-box:hover input,
-          .search-box input:not(:placeholder-shown) {
-            width: 150px;
-            font-size: 1.3rem;
-          }
-        }
-
-        @media (max-width: 768px) {
-          .links {
-            display: none;
-          }
-
-          .search-box:hover input,
-          .search-box input:not(:placeholder-shown) {
-            width: 150px;
-            font-size: 1.3rem;
-          }
-
-          .search-box {
-            margin-left: 0.2rem;
-          }
-        }
-
-        @media (max-width: 425px) {
-          .logo {
-            font-size: 2rem;
-          }
-        }
       }
     }
   }
@@ -389,16 +319,6 @@ button {
     }
   }
 }
-@media (max-width: "830px") {
-  .links,
-  .btns,
-  .search-box {
-    display: none;
-  }
-  .toggleIcon {
-    display: flex;
-  }
-}
 
 .google-info {
   display: flex;
@@ -421,5 +341,65 @@ button {
   p {
     font-size: 1.6rem;
     color: var(--color-var2);
+  }
+}
+
+//////////////////////////////////////////////////////
+
+@media (max-width: 1200px) {
+  .links {
+    gap: 30px;
+  }
+
+  .search-box:hover input,
+  .search-box input:not(:placeholder-shown) {
+    width: 180px;
+    font-size: 1.3rem;
+  }
+}
+
+@media (max-width: 1024px) {
+  .links {
+    gap: 20px;
+  }
+
+  .search-box:hover input,
+  .search-box input:not(:placeholder-shown) {
+    width: 150px;
+    font-size: 1.3rem;
+  }
+}
+
+@media (max-width: "980px") {
+  .links,
+  .btns,
+  .search-box {
+    display: none;
+  }
+
+  .toggleIcon {
+    display: flex;
+  }
+}
+
+@media (max-width: 768px) {
+  .links {
+    display: none;
+  }
+
+  .search-box:hover input,
+  .search-box input:not(:placeholder-shown) {
+    width: 150px;
+    font-size: 1.3rem;
+  }
+
+  .search-box {
+    margin-left: 0.2rem;
+  }
+}
+
+@media (max-width: 425px) {
+  .logo {
+    font-size: 2rem;
   }
 }
