--- a/src/app/Pages/checkout/checkout.component.scss
+++ b/src/app/Pages/checkout/checkout.component.scss
@@ -209,9 +209,25 @@ input[type="tel"] {
 
 .checkout-btn:hover {
   color: #fff;
-  border-color: rgba(255, 255, 255, 0.5);
   background: rgba(255, 255, 255, 0.15);
+  border-color: rgba(255, 255, 255, 0.5);
   transform: translateY(-2px);
+}
+
+.disabled-btn {
+  display: block;
+  margin: 20px auto 32px auto;
+  width: 100%;
+  color: #fff;
+  background: rgba(255, 255, 255, 0.15);
+  font-weight: 700;
+  font-size: 18px;
+  border: none;
+  padding: 12px 20px;
+  cursor: not-allowed;
+  border-radius: 8px;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  transition: 0.3s ease;
 }
 
 .reserved {
