--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -75,21 +75,9 @@
       }
     </div>
     <div class="mob-links">
-      <a
-        routerActiveLink="active"
-        routerLink="/"
-        (click)="sidebarVisible = false"
-        >Home</a
-      >
-      <a (click)="sidebarVisible = false" routerLink="/" fragment="Trending"
-        >Trending</a
-      >
-      <a
-        routerActiveLink="active"
-        routerLink="/checkout"
-        (click)="sidebarVisible = false"
-        >Cart</a
-      >
+      <a routerActiveLink="active" routerLink="/">Home</a>
+      <a href="#Trending">Trending</a>
+      <a routerActiveLink="active" routerLink="/checkout">Cart</a>
     </div>
 
     <div class="mob-btns">
