--- a/src/app/Pages/profile/profile.component.scss
+++ b/src/app/Pages/profile/profile.component.scss
@@ -1,12 +1,10 @@
 .profile {
   margin-bottom: 30px;
   .cover {
-    position: relative;
-
     .myimg {
       width: 100%;
       height: 400px;
-      background-image: url("/assets/images/cinema-cover.jpg");
+      background-image: url("/assets/images/profile22.jpg");
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: center;
@@ -16,45 +14,15 @@
         background-size: 100% 20pc;
       }
     }
-    .profile-pic {
-      position: absolute;
-      background-color: #1f1c1c;
-      left: 205px;
-      border-radius: 50%;
-      bottom: -83px;
-      img {
-        border-radius: 50%;
-        width: 140px;
-        height: 140px;
-        filter: invert(85%) sepia(0%) saturate(0%) hue-rotate(79deg)
-          brightness(96%) contrast(99%);
-      }
-      // .txt {
-      //   display: flex;
-      //   flex-direction: column;
-      //   padding: 20px;
-      //   .myName,
-      //   .email {
-      //     color: var(--color-var4);
-      //     font-size: 1.5rem;
-      //     margin-bottom: 15px;
-      //     span {
-      //       color: #cfcfcf;
-      //     }
-      //   }
-      // }
-    }
   }
   .info {
+    margin-top: -70px;
     display: flex;
     flex-direction: column;
-    padding: 15px 0;
-    padding-inline-start: 400px;
-    margin-bottom: 20px;
     .name {
       display: flex;
       align-items: center;
-      font-size: 2.8rem;
+      font-size: 2.5rem;
       font-weight: 700;
       color: #cfcfcf;
       .verfied {
@@ -66,7 +34,7 @@
       }
     }
     .email {
-      font-size: 1.5rem;
+      font-size: 1rem;
       color: #d0cccb;
     }
     @media (max-width: "767px") {
@@ -74,6 +42,35 @@
       align-items: center;
       justify-content: center;
     }
+  }
+  .profile-pic {
+    margin-top: -295px;
+    position: relative;
+    border-radius: 8px;
+    // width: 470px;
+    background-color: #1f1c1c;
+    box-shadow: 1px 1px 4px 3px #1c1818;
+    .img {
+      img {
+        border-radius: 7px;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    // .txt {
+    //   display: flex;
+    //   flex-direction: column;
+    //   padding: 20px;
+    //   .myName,
+    //   .email {
+    //     color: var(--color-var4);
+    //     font-size: 1.5rem;
+    //     margin-bottom: 15px;
+    //     span {
+    //       color: #cfcfcf;
+    //     }
+    //   }
+    // }
   }
   .fav-title,
   .purchased-title {
@@ -104,14 +101,6 @@
       }
     }
   }
-  .noFav,
-  .noPurchased {
-    display: flex;
-    // align-items: center;
-    justify-content: center;
-    font-size: 2.2rem;
-    img {
-      margin-inline-start: 10px;
-    }
+  .favourites {
   }
 }
