--- a/src/app/Components/single-movie/single-movie.component.scss
+++ b/src/app/Components/single-movie/single-movie.component.scss
@@ -62,29 +62,27 @@
   text-align: center;
 }
 
-  .genre-year-container p {
-    font-size: 1.5rem;
-    display: inline-block;
-    margin: 0;
-    color: #f5f5f5;
-  }
-  .box {
-    border-radius: 12px;
-    background-image: url(/assets/hero.jpg);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin-top: 20px;
-  }
-  :host ::ng-deep 
-	.p-rating-icon:not(.p-rating-cancel), 
-  :host ::ng-deep 
-	.p-rating-icon:not(.p-rating-cancel):hover { 
-	color: yellow !important; 
+.genre-year-container p {
+  font-size: 1.5rem;
+  display: inline-block;
+  margin: 0;
+  color: #f5f5f5;
+}
+.box {
+  border-radius: 12px;
+  // background-image: url(/assets/hero.jpg);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin-top: 20px;
+}
+:host ::ng-deep .p-rating-icon:not(.p-rating-cancel),
+:host ::ng-deep .p-rating-icon:not(.p-rating-cancel):hover {
+  color: yellow !important;
   width: 15px;
 }
 .customBtn {
   color: #fff;
-  background-color: #e50914; /* Green color for a positive action; adjust as needed */
+  background-color: #e50914;
   border: none;
   border-radius: 8px;
   font-size: 1.5rem;
