style: :sparkles: Add style for responsive profile

--- a/src/app/Pages/profile/profile.component.html
+++ b/src/app/Pages/profile/profile.component.html
@@ -2,19 +2,21 @@
 <div class="profile">
   <div class="cover">
     <div class="myimg"></div>
+  </div>
+  <div class="myContent">
     <div class="profile-pic">
       <img src="/assets/images/profile1.png" />
     </div>
-  </div>
-  <div class="info">
-    <div class="name">
-      {{ user.name }}
-      <div class="verfied">
-        <img src="/assets/images/verified.gif" />
+    <div class="info">
+      <div class="name">
+        {{ user.name }}
+        <div class="verfied">
+          <img src="/assets/images/verified.gif" />
+        </div>
       </div>
-    </div>
-    <div class="email">
-      {{ user.email }}
+      <div class="email">
+        {{ user.email }}
+      </div>
     </div>
   </div>
   <div class="container-fluid">
