style: :art: Update website bg color

--- a/src/app/Pages/home/home.component.scss
+++ b/src/app/Pages/home/home.component.scss
@@ -5,7 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 30px 30px 30px 0;
+    margin: 30px 20px;
     .filter-container {
       padding-bottom: 20px;
     }
