--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @import "primeicons/primeicons.css";
 
 :root {
-  --color-var1: #221f1f;
+  --color-var1: #1b1e25;
   --color-var2: #f5f5f1;
   // style
   --color-var3: #e50914;
