--- a/src/app/Pages/profile/profile.component.scss
+++ b/src/app/Pages/profile/profile.component.scss
@@ -92,18 +92,20 @@
     font-size: 2.5rem;
     margin-top: 60px;
     margin-bottom: 15px;
-    color: var(--color-var4);
+    color: var(--color-var3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     font-weight: 700;
     display: flex;
     align-items: center;
     .myheart,
     .myPurchased {
       margin-inline-end: 10px;
+
       img {
         width: 30px;
         height: 32px;
         filter: invert(21%) sepia(89%) saturate(2507%) hue-rotate(342deg)
-          brightness(73%) contrast(101%);
+          brightness(87%) contrast(101%);
       }
     }
   }
