--- a/src/app/Components/movies-cards/movies-cards.component.scss
+++ b/src/app/Components/movies-cards/movies-cards.component.scss
@@ -24,7 +24,7 @@
   backface-visibility: hidden;
   border-radius: 15px;
   height: 100%;
-  background-color: #1f1c1c;
+  background-color: rgb(47, 48, 53);
   box-shadow: 1px 1px 4px 3px #1c1818;
   .myPoster {
     .myimg {
