--- a/src/app/Components/cinema-seat/cinema-seat.component.scss
+++ b/src/app/Components/cinema-seat/cinema-seat.component.scss
@@ -10,6 +10,7 @@
   .seat:hover {
     width: 19px;
     height: 19px;
+    color:rgb(67, 67, 67);
   }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
